[tool.poetry]
name = "datasim"
version = "0.1.0"
description = ""
authors = ["Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.13.2"
mesa = "^1.2.1"
pyarrow = "^12.0.0"
genson = "^1.2.2"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
