[tool.poetry]
name = "datasim"
version = "0.1.0"
description = ""
authors = ["Nagacharan Teja Tangirala <nagacharan.tangirala@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.13.2"
mesa = "^2.1.0"
pyarrow = "^12.0.0"
genson = "^1.2.2"
toml = "^0.10.2"
black = "^23.7.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
